# usc-course-planner

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cache.py  catalog_config.py  config.py  course_lookup.py  main.py  models.py  scraper.py
planner/: requirement_eval.py
planner/tests/: test_requirement_eval.py
planner/web/: index.html
tests/: __init__.py  test_api.py  test_course_lookup.py  test_scraper.py
tests/fixtures/: sample_ge_program.html  sample_program.html
